@@ -271,3 +271,12 @@ kpathsea_cnf_get (kpathsea kpse, const_string name)
 
   return ret;
 }
+
+#if defined(KPSE_COMPAT_API)
+string
+kpse_cnf_get (const_string name)
+{
+    return kpathsea_cnf_get(kpse_def, name);
+}
+#endif
+
