@@ -19,8 +19,6 @@
 #ifndef KPATHSEA_CNF_H
 #define KPATHSEA_CNF_H
 
-#ifdef MAKE_KPSE_DLL /* libkpathsea internal only */
-
 #include <kpathsea/c-proto.h>
 #include <kpathsea/types.h>
 
@@ -28,8 +26,10 @@
    On the first call, also read all the `texmf.cnf' files in the
    path for kpse_cnf_format (and initialize the path).  */
 
-extern string kpathsea_cnf_get (kpathsea kpse, const_string name);
+extern KPSEDLL string kpathsea_cnf_get (kpathsea kpse, const_string name);
 
-#endif /* MAKE_KPSE_DLL */
+#if defined(KPSE_COMPAT_API)
+extern KPSEDLL string kpse_cnf_get (const_string var);
+#endif
 
 #endif /* not KPATHSEA_CNF_H */
